- Temporarely added user-already-in-chan check in m_sjoin to help tracing user-twice-in-chan bug
  which has been reported by two users (#0000594).
- Fixed halfop bug, ex: /mode -o+b user *!*@blah.com will get +b user!*@*. (#0000653)
- Blah... forgot to remove some debugging code in badwords.c (new fast replace system).
- Fixed yet another bug in new badwords replace system (should be almost finished now! ;P).
- Optimization: channel msg routine now 10-30% faster.
- Fixed 2-bans-needed-trick. (#0000626)
- Minor documentation update for SVSNLINE. (#0000651)
- Tweaked fix for 2-bans-needed-trick a bit.
- Fixed crash when link::leaf was empty. (#0000610)
- Fixed a bug where HCN would mean client exiting notices were displayed twice. As are result
  of the fix, sendto_conn_hcn has also been removed. Reported by AngryWolf (#0000672)
- Added some missing oflags for SVSO. Reported by auspice (#0000671)
- Possibly fixed the throttling bug reported by Jaw959 (#0000644)
- Fixed triple WATCH reply bug (#0000632)
- Added ZIP_LINKS support, no check in ./Config & configure yet.. you currently need to
  add -lz to IRCDLIBS in Makefile and enable it in include/config.h (and ofcourse set
  link::options::zip on both sides) -- Syzop.
- Removed unnecessary #ifdef blocks added by previous ZIP_LINKS patch
- Fixed some minor sending-1-byte-too-much bugs
- Made a STRIPBADWORDS_CHAN_ALWAYS option in include/config.h, if you define it badwords will
  always be stripped from all channels (regardless whether +G has been set or not) [default=disabled].
- Fix for error msgs flood at (at least) Linux 2.4.x and FreeBSD ("Transport endpoint is not connected"
  and "Socket is not connected"). (#0000677)
- Added makefiles to compile with zip links @ windows (zlib needed).
- Added '/stats zip' (Oper only, only usefull if ZIP_LINKS is defined).
- Fixed missing 's' flag in oper::snomask causing not receiving any server notices.